# src/routes/mod.rs
@@ -1,3 +1,4 @@
 pub mod convert;
 pub mod convert_raw;
 pub mod health;
+pub mod languages;
